# EE-Inventory-Management

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_PLAN.md  PROJECT_SPEC.md  TODO.md  config.py  main.py  pyproject.toml  requirements.txt  start.sh  webhook_server.py
api/: __init__.py  app.py  errors.py  exceptions.py  routes.py
database/: __init__.py  connection.py  models.py  schema.sql
frontend/: index.html  package.json
frontend/src/: App.css  App.tsx  constants.ts  fmt.ts  index.css
frontend/src/api/: errors.ts  services.ts
frontend/src/components/: CostFields.tsx  ErrorBoundary.tsx  InvoiceItemsTable.tsx  NewProductModal.tsx
frontend/src/hooks/: useAsync.ts  useForm.ts  useInvoiceReview.ts
frontend/src/pages/: DashboardPage.tsx  InTransitPage.tsx  InventoryPage.tsx  InvoiceListPage.tsx  ProductsPage.tsx  ReportPage.tsx  ReviewPage.tsx  ScrapeImportPage.tsx  UploadPage.tsx
frontend/src/types/: index.ts
services/: __init__.py  barcode_generator.py  brand_scraper.py  invoice_parser.py  invoice_service.py  reconciliation.py  serial_generator.py  shopify_queries.py  shopify_sync.py
tests/: __init__.py  conftest.py  test_api.py  test_barcode_generator.py  test_brand_scraper.py  test_config.py  test_database.py  test_invoice_parser.py  test_invoice_service.py  test_models.py  test_serial_generator.py  test_shopify_sync.py  test_sku.py  test_webhook.py
utils/: sku.py
